# evolu-embedded

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  REVIEW.md  RUST.md
crates/evolu-core/: Cargo.toml
crates/evolu-core/src/: crdt.rs  crypto.rs  lib.rs  message.rs  owner.rs  platform.rs  protocol.rs  relay.rs  storage.rs  sync.rs  timestamp.rs  transport.rs  types.rs
crates/evolu-demo/: Cargo.toml
crates/evolu-demo/src/: main.rs
crates/evolu-file-storage/: Cargo.toml
crates/evolu-file-store/: Cargo.toml
crates/evolu-file-store/src/: lib.rs
crates/evolu-page-store/: Cargo.toml
crates/evolu-page-store/src/: directory.rs  file_host.rs  host.rs  index.rs  lib.rs  page.rs  storage.rs
crates/evolu-std-platform/: Cargo.toml
crates/evolu-std-platform/src/: lib.rs
crates/evolu-stream-store/: Cargo.toml
crates/evolu-stream-store/src/: file_host.rs  host.rs  index.rs  lib.rs  storage.rs  trusted_state.rs
crates/evolu-ws-transport/: Cargo.toml
crates/evolu-ws-transport/src/: lib.rs
