[package]
name = "evolu-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Evolu CRDT sync protocol — pure Rust, no_std compatible"

[features]
default = ["std"]
std = []

[dependencies]
chacha20poly1305 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
heapless = { workspace = true }

[dev-dependencies]
getrandom = { workspace = true }
