[package]
name = "evolu-demo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Evolu embedded sync demo — two clients, real relay, persistent storage"

[dependencies]
evolu-core = { workspace = true }
evolu-stream-store = { workspace = true, features = ["std"] }
evolu-file-store = { workspace = true }
evolu-std-platform = { workspace = true }
evolu-ws-transport = { workspace = true }
getrandom = { workspace = true }
