[package]
name = "evolu-page-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Host-storage backend for Evolu — streaming encrypted index + host data cache"

[features]
default = ["std"]
std = ["getrandom"]

[dependencies]
evolu-core = { workspace = true }
chacha20poly1305 = { workspace = true }
sha2 = { workspace = true }
heapless = { workspace = true }
getrandom = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
getrandom = { workspace = true }
