[package]
name = "evolu-stream-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Stream-storage backend for Evolu — streaming encrypted index on untrusted host + host data cache"

[features]
default = ["std"]
std = []

[dependencies]
evolu-core = { workspace = true }
chacha20poly1305 = { workspace = true }
sha2 = { workspace = true }
heapless = { workspace = true }

[dev-dependencies]
evolu-std-platform = { workspace = true }
tempfile = { workspace = true }
getrandom = { workspace = true }
