[package]
name = "evolu-ws-transport"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "WebSocket transport for Evolu — connects to a real Evolu relay"

[features]
default = ["std"]
std = []

[dependencies]
evolu-core = { workspace = true }
tungstenite = { workspace = true }

[dev-dependencies]
getrandom = { workspace = true }
evolu-file-store = { workspace = true }
